# Ordona

./: meson.build
.cache/clangd/index/: ConvertUTF.cpp.9690336F6460535F.idx  ConvertUTF.h.4BE518444B577A6F.idx  console.h.528966DD781DA112.idx  consoleUnix.cpp.A7AEACAECCFA884B.idx  conversion.cxx.3494E349929F8626.idx  conversion.hxx.AE7E80C23F03BF86.idx  escape.cxx.F7FDBBDA8338B3E0.idx  escape.hxx.1D7A335EDC5447F9.idx  history.cxx.AC17823380604CDA.idx  history.hxx.4E2A5FEFDBBBF55F.idx  killring.hxx.9E64C3F1C06F729E.idx  main.cpp.58DF74E2351E50CA.idx  ordona.cpp.0663757E3EF9A1AD.idx  ordona.h.314A180CCD1960A2.idx  predictor.cpp.DEEBC1E3090B9876.idx  predictor.h.33E6295E7540098C.idx  prompt.cxx.5652B92E13DBB9E4.idx  prompt.hxx.9BBACCC2420E3721.idx  replxx.cxx.7C3C91D7F7AFCE1C.idx  replxx.h.30F923EC20258F8D.idx  replxx.hxx.61B76A8F3B2062E1.idx  replxx_impl.cxx.BF6F194097F74672.idx  replxx_impl.hxx.EC0457A76E9B2D2B.idx  terminal.cxx.8126ADEA9EEC4CAF.idx  terminal.hxx.8DCBBECFC79421DE.idx  unicodestring.hxx.50DBE2D4169F69C4.idx  utf8string.hxx.F13B0DE84B4B787A.idx  util.cxx.CD73476AFEDB7FAB.idx  util.hxx.6AB940B47EF7629A.idx  wcwidth.cpp.3AB4171A2D25109D.idx
include/: console.h  git.h  line_editor.h  ordona.h  plugin.h  plugin_loader.h  predictor.h  terminal.h
src/: consoleUnix.cpp  consoleWin.cpp  git.cpp  line_editor.cpp  main.cpp  ordona.cpp  plugin_loader.cpp  predictor.cpp  terminalUnix.cpp  terminalWin.cpp
